--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,6 @@
   },
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
+  "css.validate": false, // Disable css built-in lint
+  "stylelint.enable": true, // Enable sytlelin
 }
